[nexys][pwm][rewind] everything compiles; ready to test.
pwm_converter is filthy, but perhaps functional. It will need
refactoring.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ proposal/auto*
 *.pdf
 *.html
 
+# locks, though this should be global gitignore
+.#*
+
+*a.out
 
 !vivado/project.srcs/sources_1/imports/src*
 
