[tests][nexys] timing is hard. It's easier to test the nexys with probes.

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,9 @@ proposal/auto*
 # locks, though this should be global gitignore
 .#*
 
+
 *a.out
+vivado.*
 
 !vivado/project.srcs/sources_1/imports/src*
 
